[gd_scene load_steps=11 format=3 uid="uid://dlo2y3kdnhutn"]

[ext_resource type="Script" path="res://codes/player/player.gd" id="1_6d0f6"]
[ext_resource type="Texture2D" uid="uid://c160ocf5ndrg1" path="res://codes/icon.svg" id="1_35qv5"]
[ext_resource type="Script" path="res://codes/player/health.gd" id="3_7h0in"]
[ext_resource type="Script" path="res://codes/player/ui.gd" id="3_nmg3g"]
[ext_resource type="Script" path="res://codes/player/stamina.gd" id="5_mldes"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trlo7"]
size = Vector2(128, 126)

[sub_resource type="Animation" id="Animation_dkqka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/dead_menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/dead_menu/return:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/dead_menu/quit:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0u4bj"]
resource_name = "quit"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8jm5n"]
resource_name = "show_die_menu"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/dead_menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/dead_menu/return:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/dead_menu/quit:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uteea"]
_data = {
"RESET": SubResource("Animation_dkqka"),
"quit": SubResource("Animation_0u4bj"),
"show_die_menu": SubResource("Animation_8jm5n")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_6d0f6")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, -64)
texture = ExtResource("1_35qv5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -65)
shape = SubResource("RectangleShape2D_trlo7")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_nmg3g")

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="health" type="ProgressBar" parent="UI/CanvasLayer"]
modulate = Color(1, 0, 0.0166664, 1)
offset_left = 1714.0
offset_right = 1817.0
offset_bottom = 24.0
scale = Vector2(2, 2)
value = 100.0
show_percentage = false
script = ExtResource("3_7h0in")

[node name="stamina" type="ProgressBar" parent="UI/CanvasLayer"]
modulate = Color(0.83, 0.691667, 0, 1)
offset_left = 1714.0
offset_top = 53.0
offset_right = 1817.0
offset_bottom = 77.0
scale = Vector2(2, 2)
value = 100.0
show_percentage = false
script = ExtResource("5_mldes")

[node name="dead_menu" type="Label" parent="UI/CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -257.0
offset_right = 370.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 135
text = "вы умерли"

[node name="return" type="Button" parent="UI/CanvasLayer/dead_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = 120.5
offset_right = 294.0
offset_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "возродиться"

[node name="quit" type="Button" parent="UI/CanvasLayer/dead_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.5
offset_top = 292.5
offset_right = 151.5
offset_bottom = 424.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "выйти"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_uteea")
}

[node name="ColorRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_right = 1179.0
offset_bottom = 897.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[connection signal="pressed" from="UI/CanvasLayer/dead_menu/return" to="UI" method="_on_return_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/dead_menu/quit" to="UI" method="_on_quit_pressed"]
